# terrier-submission

./: .gitignore  Cargo.toml  README.md  USAGE.md  test.json
example_tmp/: data.json
input/: data.json
src/: data.json  main.rs
src/file_tools/: metadata.rs  mod.rs  verification.rs
src/git_tools/: metadata.rs  mod.rs  repository.rs  verification.rs
src/plag_check/: copydetect.rs  gather_repo.rs  mod.rs  plag_result.rs  prereq_check.rs  verification.rs
src/zip_tools/: extractor.rs
