[package]
name = "terrier-submission"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
zip = "5.1.1"
clap = { version = "4", features = ["derive"] }
git2 = "0.20.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = "0.4.42"